--- a/_posts/C/2023-04-02-C-Array.md
+++ b/_posts/C/2023-04-02-C-Array.md
@@ -14,12 +14,12 @@ date: 2023-04-05
 ---
 
 ## 📚1차원 배열
-배열이란 같은 자료형의 값이 순서대로 하나의 배열의 이름에 모여있는 것을 말합니다. 각각의 자료는 원소라고 하고 이들은 배열명과 첨자로 구분됩니다. 첨자의 표현은 대괄호[]로 나타냅니다.
+배열이란 같은 자료형의 값이 순서대로 하나의 배열의 이름에 모여있는 것을 말한다. 각각의 자료는 원소라고 하고 이들은 배열명과 첨자로 구분된다. 첨자의 표현은 대괄호[]로 나타낸다.
 
 ### 📄배열 선언
-1차원 배열은 배열의 첨자가 하나만 있는 것을 말합니다. 첨자 안의 수는 배열의 크기를 나타내는데 이는 배열 전체의 구성 요소의 개수를 의미합니다. 배열은 배열의 이름과 첨자로 구분되고 첨자는 0부터 시작됩니다. 배열의 각 요소는 일반 변수와 같이 취급되며 자료형과 함께 기억 클래스도 갖게 됩니다.
+1차원 배열은 배열의 첨자가 하나만 있는 것을 말한다. 첨자 안의 수는 배열의 크기를 나타내는데 이는 배열 전체의 구성 요소의 개수를 의미한다. 배열은 배열의 이름과 첨자로 구분되고 첨자는 0부터 시작된다. 배열의 각 요소는 일반 변수와 같이 취급되며 자료형과 함께 기억 클래스도 갖게 된다.
 
-배열 선언은 배열의 각 요소를 위한 기억공간이 연속해서 할당되는 것을 의미합니다. int array[5]라는 배열 선언은 int형 변수 5개가 모여 구성되는 array라는 이름의 기억공간 확보를 의미합니다.
+배열 선언은 배열의 각 요소를 위한 기억공간이 연속해서 할당되는 것을 의미한다. int array[5]라는 배열 선언은 int형 변수 5개가 모여 구성되는 array라는 이름의 기억공간 확보를 의미한다.
 
 ```c
 #include <stdio.h>
@@ -33,7 +33,7 @@ void main()
 <br><br>
 
 ### 📄배열의 초기화
-배열도 변수와 마찬가지로 선언했으면 기억공간을 초기화해야 합니다.
+배열도 변수와 마찬가지로 선언했으면 기억공간을 초기화해야 한다.
 
 ```c
 #include <stdio.h>
@@ -63,7 +63,7 @@ void main()
 <br><br><br>
 
 ## 📚다차원 배열
-2차원 이상의 배열을 다차원 배열이라고 합니다. 일반적으로 2차원 배열과 3차원 배열이 사용됩니다. 2차원 배열은 선언문에 2 개의 첨자를 가집니다. 
+2차원 이상의 배열을 다차원 배열이라고 한다. 일반적으로 2차원 배열과 3차원 배열이 사용된다. 2차원 배열은 선언문에 2 개의 첨자를 가진다. 
 
 ### 📄2차원 배열
 
@@ -81,7 +81,7 @@ int array[3][3] = { {1, 2, 3},
                     {7, 8, 9} };
 ```
 
-2차원 배열이 선언되면 실제 기억 공간에는 1차원으로 자료가 순서대로 저장됩니다. 2차원 배열에서 행만 표시하고 열을 생략하면 해당 행이 배열이 시작되는 주소를 가리킵니다.
+2차원 배열이 선언되면 실제 기억 공간에는 1차원으로 자료가 순서대로 저장된다. 2차원 배열에서 행만 표시하고 열을 생략하면 해당 행이 배열이 시작되는 주소를 가리킨다.
 
 <br>
 
@@ -116,7 +116,7 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄3차원 배열
 
@@ -171,10 +171,10 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚char형 배열과 문자열
-C 언어는 문자열에 대한 자료형이 없습니다. 문자열을 처리하기 위해 char형 배열을 사용하거나 포인터를 사용해야 합니다. 문자열은 " "로 묶인 문자 나열을 말하고 특수한 배열로 취급합니다. C 언어는 문자열의 마지막 부분에 null 문자('\0')를 자동으로 삽입합니다.
+C 언어는 문자열에 대한 자료형이 없다. 문자열을 처리하기 위해 char형 배열을 사용하거나 포인터를 사용해야 한다. 문자열은 " "로 묶인 문자 나열을 말하고 특수한 배열로 취급한다. C 언어는 문자열의 마지막 부분에 null 문자('\0')를 자동으로 삽입한다.
 
 ```c
 char 배열이름[문자열 길이 + 1];
@@ -214,11 +214,15 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚함수와 배열
-배열을 함수의 매개변수로 사용할 때 함수 호출 시 첨자를 빼고, 배열 이름만 명시하여 호출해야 합니다. 매개변수가 1차원 배열이라면 배열의 크기는 명시하지 않아도 되고, 다차원 배열의 경우 가장 높은 차원의 크기를 생략할 수 있습니다. 만약 배열의 크기를 명시할 경우 매개변수로 넘겨주는 배열의 크기가 항상 명시한 값으로 제한됩니다. 배열이 매개변수로 전달될 때 배열 값이 복사되어 전달되는 것이 아니라 배열의 위치만 전달됩니다. 쉽게 말해, 참조에 의한 전달 방법을 사용합니다.
-<br><br>
+배열을 함수의 매개변수로 사용할 때 함수 호출 시 첨자를 빼고, 배열 이름만 명시하여 호출해야 한다. 매개변수가 1차원 배열이라면 배열의 크기는 명시하지 않아도 되고, 다차원 배열의 경우 가장 높은 차원의 크기를 생략할 수 있다. 만약 배열의 크기를 명시할 경우 매개변수로 넘겨주는 배열의 크기가 항상 명시한 값으로 제한된다.
+
+배열이 매개변수로 전달될 때 배열 값이 복사되어 전달되는 것이 아니라 배열의 위치만 전달된다. 쉽게 말해, 참조에 의한 전달 방법을 사용한다.
+
+<br>
+
 ```c
 #include <stdio.h>
 
