--- a/_posts/C/2023-04-10-C-Pointer.md
+++ b/_posts/C/2023-04-10-C-Pointer.md
@@ -14,7 +14,7 @@ date: 2023-04-10
 ---
 
 ## 📚포인터의 개요
-포인터는 변수의 일종인데 포인터가 일반 변수와 다른 점은 실질적인 데이터값을 갖는 것이 아니라 데이터가 저장된 기억 장소의 주소를 갖습니다. 변수는 변수에 대입된 자료값과 자신에게 할당된 기억공간의 주소를 가지고 있습니다. 포인터를 사용하면 접근하고자 하는 변수의 기억공간 주소를 저장할 수 있게 됩니다. 따라서 변수의 기억공간에 직접 접근할 수 있습니다.
+포인터는 변수의 일종인데 포인터가 일반 변수와 다른 점은 실질적인 데이터값을 갖는 것이 아니라 데이터가 저장된 기억 장소의 주소를 갖는다. 변수는 변수에 대입된 자료값과 자신에게 할당된 기억공간의 주소를 가지고 있다. 포인터를 사용하면 접근하고자 하는 변수의 기억공간 주소를 저장할 수 있게 된다. 따라서 변수의 기억공간에 직접 접근할 수 있다.
 
 ```c
 #include <stdio.h>
@@ -33,7 +33,7 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚포인터 변수의 선언
 ### 📄포인터 변수의 선언
@@ -57,10 +57,10 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄포인터 변수의 참조
-포인터 변수의 참조란 어떤 포인터 변수가 가리키는 내용을 읽어 내거나 값을 대입하는 것을 말합니다.
+포인터 변수의 참조란 어떤 포인터 변수가 가리키는 내용을 읽어 내거나 값을 대입하는 것을 말한다.
 
 ```c
 int *p, i = 1;
@@ -99,10 +99,10 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄void형 포인터
-컴파일 시 자료형을 결정하지 못하고, 프로그램 실행 시 포인터의 자료형이 결정되는 경우 void형 포인터를 사용합니다. 어떤 자료형을 가지는 기억공간의 주소를 넘겨주는지 알려줘야 하기 때문에 반드시 명시적 형변환이 필요합니다.
+컴파일 시 자료형을 결정하지 못하고, 프로그램 실행 시 포인터의 자료형이 결정되는 경우 void형 포인터를 사용한다. 어떤 자료형을 가지는 기억공간의 주소를 넘겨주는지 알려줘야 하기 때문에 반드시 명시적 형변환이 필요하다.
 
 ```c
 #include <stdio.h>
@@ -123,10 +123,10 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚포인터 연산
-포인터 변수에 1을 증감하는 것은 포인터가 가리키고 있는 주소를 중심으로 이후, 이전의 자료가 있는 곳을 가리키는 것을 의미합니다. 쉽게 말해, 값의 변화가 아니고 주소의 이동 입니다. 포인터 변수 p가 있을 때, p를 1 증가시키면 증가되는 주소는 *p의 자료형의 byte수가 됩니다. 예를 들면 int형 포인터 변수에 1을 증가시키면 4byte 이후 자료가 있는 곳을 가리킵니다. 또한 포인터 연산은 덧셈과 뺄셈만 가능합니다.
+포인터 변수에 1을 증감하는 것은 포인터가 가리키고 있는 주소를 중심으로 이후, 이전의 자료가 있는 곳을 가리키는 것을 의미한다. 쉽게 말해, 값의 변화가 아니고 주소의 이동이다. 포인터 변수 p가 있을 때, p를 1 증가시키면 증가되는 주소는 *p의 자료형의 byte수가 된다. 예를 들면 int형 포인터 변수에 1을 증가시키면 4byte 이후 자료가 있는 곳을 가리킨다. 또한 포인터 연산은 덧셈과 뺄셈만 가능하다.
 
 ```c
 #include <stdio.h>
@@ -150,16 +150,17 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚포인터와 배열
 ### 📄char형 포인터
-문자열을 처리할 때 char형 배열을 사용해도 되지만 char형 포인터를 사용해도 됩니다.
+문자열을 처리할 때 char형 배열을 사용해도 되지만 char형 포인터를 사용해도 된다.
 
 ```c
 char *c = "Hello";
 ```
-c의 값은 문자열 "Hello"가 들어있는 기억공간의 시작 주소입니다. 그리고 문자열 끝에는 null문자가 붙습니다.따라서 *c의 값은 문자열 "Hello"가 아니고 문자열의 첫 번째 문자 "H"가 됩니다.
+
+c의 값은 문자열 "Hello"가 들어있는 기억공간의 시작 주소이다. 그리고 문자열 끝에는 null문자가 붙는다. 따라서 *c의 값은 문자열 "Hello"가 아니고 문자열의 첫 번째 문자 "H"가 된다.
 
 <br>
 
@@ -177,19 +178,22 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄포인터와 배열
-배열은 포인터의 일부분입니다. 모든 배열은 포인터로 표현할 수 있습니다.
+배열은 포인터의 일부분이다. 모든 배열은 포인터로 표현할 수 있다.
 
 ```c
 char* str, s[] = "Hello";
 str = s;
 ```
 
-str이 가리키는 기억장소의 내용은 배열 s의 첫번째 원소 "H"입니다. *(str + 1)은 s[1]인 "e"와 같습니다. 배열 이름 그 자체가 포인터라 배열의 이름만 가지고도 포인터처럼 사용할 수 있습니다.
+str이 가리키는 기억장소의 내용은 배열 s의 첫번째 원소 "H"이다. *(str + 1)은 s[1]인 "e"와 같다. 배열 이름 그 자체가 포인터라 배열의 이름만 가지고도 포인터처럼 사용할 수 있다.
 
-포인터를 이용한 2차원 배열 참조
+<br>
+
+**포인터를 이용한 2차원 배열 참조**
+
 ```c
 #include <stdio.h>
 
@@ -214,19 +218,19 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄포인터와 배열의 차이
-* 배열과 포인터는 호환이 가능하지만 포인터 변수에는 다른 주소 값을 넣을 수 있지만 배열 변수에는 다른 값을 넣을 수 없다는 차이가 있습니다.
+* 배열과 포인터는 호환이 가능하지만 포인터 변수에는 다른 주소 값을 넣을 수 있지만 배열 변수에는 다른 값을 넣을 수 없다는 차이가 있다.
 
-* 배열 이름의 값을 변경하는 것은 불가능하나 포인터에서는 ++p 또는 --p와 같이 값이 변경 될 수 있다는 차이점이 있습니다.
+* 배열 이름의 값을 변경하는 것은 불가능하나 포인터에서는 ++p 또는 --p와 같이 값이 변경 될 수 있다는 차이점이 있다.
 
-* 배열과 포인터는 기억공간의 확보 방식에 차이가 있습니다. 배열은 기억공간에 자료 영역을 고정적으로 확보하는데 포인터는 유동적으로 자료 영역을 확보합니다. 포인터는 필요할 때만 자료용 기억공간을 확보하고 그렇지 않을 때는 자료용 기억공간을 확보하지 않습니다. 따라서 가변적인 자료를 사용해야할 때 배열 보다 포인터를 사용하는 것이 효율적입니다.
+* 배열과 포인터는 기억공간의 확보 방식에 차이가 있다. 배열은 기억공간에 자료 영역을 고정적으로 확보하는데 포인터는 유동적으로 자료 영역을 확보한다. 포인터는 필요할 때만 자료용 기억공간을 확보하고 그렇지 않을 때는 자료용 기억공간을 확보하지 않는다. 따라서 가변적인 자료를 사용해야할 때 배열 보다 포인터를 사용하는 것이 효율적이다.
 
-<br><br><br>
+<br><br>
 
 ## 📚포인터 배열
-포인터들의 배열을 포인터 배열이라고 합니다. 즉, 배열의 원소가 포인터로서 포인터의 집합을 의미합니다. 포인터 배열은 주로 문자열 배열을 처리할 때 사용됩니다.
+포인터들의 배열을 포인터 배열이라고 한다. 즉, 배열의 원소가 포인터로서 포인터의 집합을 의미한다. 포인터 배열은 주로 문자열 배열을 처리할 때 사용된다.
 
 ```c
 #include <stdio.h>
@@ -247,10 +251,10 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚이중 포인터
-이중 포인터는 자료가 있는 곳을 2중으로 가리키는 포인터입니다. 이중 포인터가 가리키는 주소에는 주소값이 들어있습니다. 다시 이중 포인터가 가리키는 주소를 찾아가면 자료를 참조하게 됩니다.
+이중 포인터는 자료가 있는 곳을 2중으로 가리키는 포인터이다. 이중 포인터가 가리키는 주소에는 주소값이 들어있다. 다시 이중 포인터가 가리키는 주소를 찾아가면 자료를 참조하게 된다.
 
 ```c
 #include <stdio.h>
