--- a/_posts/C/2023-04-18-C-Struct.md
+++ b/_posts/C/2023-04-18-C-Struct.md
@@ -14,7 +14,7 @@ date: 2023-04-18
 ---
 
 ## 📚구조체의 개요
-구조체란 서로 다른 자료형을 갖는 자료의 모임을 하나의 자료형으로 정의하여 사용하는 자료형입니다. 구조체는 사용자가 정의하여 사용하는 자료형이라 기존의 변수처럼 사용할 수 있습니다. 구조체는 다양한 형식의 자료를 묶어서 표현할 수 있을 뿐 아니라 사용자가 새로운 형식을 정의하여 사용할 수 있다는 장점이 있습니다.
+구조체란 서로 다른 자료형을 갖는 자료의 모임을 하나의 자료형으로 정의하여 사용하는 자료형이다. 구조체는 사용자가 정의하여 사용하는 자료형이라 기존의 변수처럼 사용할 수 있다. 구조체는 다양한 형식의 자료를 묶어서 표현할 수 있을 뿐 아니라 사용자가 새로운 형식을 정의하여 사용할 수 있다는 장점이 있다.
 
 ```c
 struct student
@@ -25,7 +25,7 @@ struct student
 };
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚구조체의 정의와 선언
 ### 📄구조체 정의
@@ -39,12 +39,12 @@ struct student
 };
 ```
 
-구조체 정의를 통해 student라는 이름의 새로운 자료형이 정의되었습니다. 이것을 사용자 정의 자료형이라고 하고 구조체를 구성하는 변수들을 구조체 멤버라고 합니다.
+구조체 정의를 통해 student라는 이름의 새로운 자료형이 정의되었다. 이것을 사용자 정의 자료형이라고 하고 구조체를 구성하는 변수들을 구조체 멤버라고 한다.
 
-<br><br>
+<br>
 
 ### 📄구조체 선언
-정의된 구조체를 사용하려면 구조체 변수를 선언해야 합니다. 구조체 변수는 일반 변수, 배열, 포인터 등의 형태로 다양하게 선언될 수 있습니다.
+정의된 구조체를 사용하려면 구조체 변수를 선언해야 한다. 구조체 변수는 일반 변수, 배열, 포인터 등의 형태로 다양하게 선언될 수 있다.
 
 ```c
 struct student a, b;    // 구조체 변수 a, b 선언
@@ -52,7 +52,8 @@ struct student a, b;    // 구조체 변수 a, b 선언
 
 <br>
 
-구조체는 선언과 동시에 정의도 가능합니다.
+구조체는 선언과 동시에 정의도 가능하다.
+
 ```c
 struct student
 {
@@ -61,11 +62,11 @@ struct student
     int Number;
 } a, b;
 
-// 같은 형의 구조체 변수 사이에 배정 연산자를 사용할 수 있습니다.
+// 같은 형의 구조체 변수 사이에 배정 연산자를 사용할 수 있다.
 b = a;
 
-// 구조체형과 변수를 동시에 선언할 경우 구조체 이름을 쓰지 않아도 됩니다.
-// 구조체 이름이 없기 때문에 동일 형의 변수는 선언할 수 없습니다.
+// 구조체형과 변수를 동시에 선언할 경우 구조체 이름을 쓰지 않아도 된다.
+// 구조체 이름이 없기 때문에 동일 형의 변수는 선언할 수 없다.
 struct
 {
     char Name[4];
@@ -73,7 +74,7 @@ struct
     int Number;
 } a1;
 
-// 위와 아래의 구조체 모양은 같지만 컴파일러는 두 형을 다르게 취급하기 때문에 아래와 같은 배정은 불가능합니다.
+// 위와 아래의 구조체 모양은 같지만 컴파일러는 두 형을 다르게 취급하기 때문에 아래와 같은 배정은 불가능하다.
 
 struct
 {
@@ -85,14 +86,10 @@ struct
 a1 = b1;    // 불가능
 ```
 
-<br>
-
-
-
-<br><br><br>
+<br><br>
 
 ## 📚구조체 초기화
-구조체 초기화는 배열 초기화와 같은 방법으로 이루어집니다.
+구조체 초기화는 배열 초기화와 같은 방법으로 이루어진다.
 
 ```c
 // 1
@@ -114,10 +111,10 @@ struct student
 } a = {"홍길동", 20, 1};
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚구조체 멤버 참조
-구조체 변수를 사용하기 위해 구조체 변수 안에 존재하는 구조체 멤버에 접근할 수 있어야 합니다. 구조체 멤버에 값을 대입하거나 꺼내려면 멤버 연산자인 도트(.)연산자를 사용합니다.
+구조체 변수를 사용하기 위해 구조체 변수 안에 존재하는 구조체 멤버에 접근할 수 있어야 한다. 구조체 멤버에 값을 대입하거나 꺼내려면 멤버 연산자인 도트(.)연산자를 사용한다.
 
 ```c
 #include <stdio.h>
@@ -137,10 +134,10 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚구조체 배열
-동일한 구조를 갖는 구조체 변수가 여러 개 사용될 때 구조체 변수를 대표하는 배열 이름을 설정하여 일반 배열 처럼 사용하는 것입니다.
+동일한 구조를 갖는 구조체 변수가 여러 개 사용될 때 구조체 변수를 대표하는 배열 이름을 설정하여 일반 배열 처럼 사용하는 것이다.
 
 ```c
 #include <stdio.h>
@@ -163,11 +160,11 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚구조체 포인터
 ###  📄구조체 포인터 선언
-구조체 포인터는 구조체 변수 선언할 때 *를 변수 앞에 붙여서 포인터로 선언합니다. 구조체 포인터는 주소값을 갖게 되며 자료가 있는 곳을 가리킵니다.
+구조체 포인터는 구조체 변수 선언할 때 *를 변수 앞에 붙여서 포인터로 선언한다. 구조체 포인터는 주소값을 갖게 되며 자료가 있는 곳을 가리킨다.
 
 ```c
 struct student
@@ -183,14 +180,14 @@ struct student *p;      // 구조체 포인터 p선언
 p = &a;                 // 포인터 변수 초기화
 ```
 
-<br><br>
+<br>
 
 ###  📄구조체 포인터 멤버 참조
 * 도트 연산자(.) 사용
 <br>
 (*p).Name
 <br>
-*보다 .연산의 우선순위가 높기 때문에 도트 연산자를 사용할 경우 괄호를 사용해야 합니다.
+*보다 .연산의 우선순위가 높기 때문에 도트 연산자를 사용할 경우 괄호를 사용해야 한다.
 
 
 * 포인터 연산자(->) 사용
@@ -229,11 +226,11 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚함수와 구조체
 ### 📄구조체를 함수의 매개변수로 사용
-구조체를 함수의 매개변수로 사용하는 방법은 일반 변수를 함수의 매개변수로 사용하는 것과 같습니다. 구조체를 값에 의한 자료전달로 매개변수를 사용하면 구조체 내용 전체가 복사되기 때문에 시간이 많이 걸리고 기억공간의 낭비가 심하다는 단점이 있습니다.
+구조체를 함수의 매개변수로 사용하는 방법은 일반 변수를 함수의 매개변수로 사용하는 것과 같다. 구조체를 값에 의한 자료전달로 매개변수를 사용하면 구조체 내용 전체가 복사되기 때문에 시간이 많이 걸리고 기억공간의 낭비가 심하다는 단점이 있다.
 
 ```c
 #include <stdio.h>
@@ -264,10 +261,10 @@ void main()
 }
 ```
 
-<br><br>
+<br>
 
 ### 📄구조체 포인터를 함수의 매개변수로 사용
-구조체 포인터를 함수 매개변수로 사용하면 구조체를 복사하지 않아도 되기 때문에 프로그램 실행 속도를 향상시킬 수 있고 기억공간의 사용 효율도 올라가는 장점이 있습니다.
+구조체 포인터를 함수 매개변수로 사용하면 구조체를 복사하지 않아도 되기 때문에 프로그램 실행 속도를 향상시킬 수 있고 기억공간의 사용 효율도 올라가는 장점이 있다.
 
 ```c
 #include <stdio.h>
@@ -296,10 +293,10 @@ void main()
 }
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚typedef
-typedef는 이미 존재하는 자료형에 새로운 이름을 붙일 때 사용하는 키워드입니다. 기존 자료형의 이름을 바꾸거나 구조체형을 선언하는데 많이 사용됩니다.
+typedef는 이미 존재하는 자료형에 새로운 이름을 붙일 때 사용하는 키워드이다. 기존 자료형의 이름을 바꾸거나 구조체형을 선언하는데 많이 사용된다.
 
 ```c
 typedef unsigned int BYTE;
@@ -333,7 +330,7 @@ void main()
 
 <br>
 
-아래와 같이 한번에 사용할 수도 있습니다.
+아래와 같이 한번에 사용할 수도 있다.
 ```c
 typedef struct num
 {
