--- a/_posts/C/2023-04-21-C-Union.md
+++ b/_posts/C/2023-04-21-C-Union.md
@@ -14,7 +14,7 @@ date: 2023-04-21
 ---
 
 ## 📚공용체의 정의
-공용체는 하나의 자료를 여러 멤버가 공통적으로 사용하게 해주는 것 입니다. 즉, 동일한 기억장소에 여러 유형의 자료를 저장하기 위해 사용자가 선언한 자료형입니다. 공용체는 멤버들이 완전히 다른 자료형의 값을 가질 때 기억공간을 절약하기 위해 사용됩니다.
+공용체는 하나의 자료를 여러 멤버가 공통적으로 사용하게 해주는 것이다. 즉, 동일한 기억장소에 여러 유형의 자료를 저장하기 위해 사용자가 선언한 자료형이다. 공용체는 멤버들이 완전히 다른 자료형의 값을 가질 때 기억공간을 절약하기 위해 사용된다.
 
 ```c
 union var           // 공용체 정의
@@ -27,10 +27,10 @@ union var           // 공용체 정의
 union var abc;      // 공용체 변수 선언
 ```
 
-<br><br><br>
+<br><br>
 
 ## 📚공용체의 사용
-공용체 선언이 이뤄지면 멤버 중 자료의 크기가 가장 큰 멤버에 대해서만 기억공간이 할당되고 기억공간의 시작 위치부터 각 부분을 다른 멤버가 공용으로 사용합니다.
+공용체 선언이 이뤄지면 멤버 중 자료의 크기가 가장 큰 멤버에 대해서만 기억공간이 할당되고 기억공간의 시작 위치부터 각 부분을 다른 멤버가 공용으로 사용한다.
 
 ```c
 #include <stdio.h>
@@ -50,3 +50,5 @@ void main()
     temp.c = 123.4567;      // 10이 지원지고 123.4567 저장됨. 8byte 사용
 }
 ```
+
+<br><br>
